@@ -600,14 +600,15 @@ class Folder extends \GO\Base\Db\ActiveRecord {
 	 * and added to the database.
 	 *
 	 * @param \GO\Base\Fs\File $file
+	 * @param boolean $appendNumberToNameIfExists Set if a number needs to be added to the name if the file already exists.
 	 * @return File
 	 */
-	public function addFilesystemFile(\GO\Base\Fs\File $file){
+	public function addFilesystemFile(\GO\Base\Fs\File $file, $appendNumberToNameIfExists=false){
 
 		if(!File::checkQuota($file->size()))
 			throw new \GO\Base\Exception\InsufficientDiskspace();
 
-		$file->move($this->fsFolder);
+		$file->move($this->fsFolder, false, false, $appendNumberToNameIfExists);
 		$file->setDefaultPermissions();
 		return $this->addFile($file->name());
 	}
